# pyciaf

./: --help_metadata_config.json  .gitignore  AGENTIC_EVENTS_IMPLEMENTATION.md  CANONICALIZATION_CLEANUP_SUMMARY.md  CHANGELOG.md  CIAF_BUGFIX_SUMMARY.md  CIAF_COMPLETE_SCHEMA.md  CIAF_DOCUMENTATION_ENHANCEMENT_SUMMARY.md  CIAF_LCM_CLEANUP_SUMMARY.md  CIAF_LCM_PROTOCOL_REFACTORING_SUMMARY.md  CIAF_SCHEMA_SPECIFICATION.md  CIAF_SESSION_COMPLETE_SUMMARY.md  CIAF_VAULT_CLOUD_INTEGRATION_API.md  CIAF_WEB_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  COMMERCIAL_LICENSE.md  COMMON_SCHEMA_CONSOLIDATION_ANALYSIS.md  COMPLETE_SESSION_RECAP.md  COMPLIANCE_IMPROVEMENTS_SUMMARY.md  CORE_IMPLEMENTATION_SUMMARY.md  CREDIT_DEMO_SUCCESS_SUMMARY.md  DATASET_METADATA_EXPANSION.md  DATA_QUALITY_VALIDATOR_IMPLEMENTATION_SUMMARY.md  DEFERRED_LCM_README.md  DEPENDENCY_FIXES_SUMMARY.md  DEPLOYABLE_MODEL_DEMO_GUIDE.md  DOCUMENTATION_VERIFICATION_SUMMARY.md  DUAL_HASH_REVIEW.md  ENTERPRISE_FEATURES_IMPLEMENTATION_SUMMARY.md  EXAMPLES_GUIDE.md  FINAL_CODEBASE_ORGANIZATION_SUMMARY.md  FINAL_DATAQUALITYVALIDATOR_SUMMARY.md  FRAGMENT_VERIFICATION_FIX.md  HIERARCHICAL_VERIFICATION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_v1.3.0.md  INSTALLATION.md  LEGAL.md  LICENSE  LICENSE_UPDATE_SUMMARY.md  (+85 more)
ciaf/: .gitignore  ANCHOR_TERMINOLOGY_UPDATE.md  CHANGELOG.md  CIAF_LCM_IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  README.md  RNG_REPRODUCIBILITY_ENHANCEMENT.md  SECURITY.md  __init__.py  adaptive_lcm.py  cli.py  crypto_health.py  deferred_lcm.py  deferred_lcm_design.py  determinism_metadata.py  enhanced_model_wrapper.py  enhanced_receipts.py  evidence_strength.py  fraud_detection_audit_report_20250911_062256.json  metadata_config.py  metadata_integration.py  metadata_storage_optimized.py  pyproject.toml  setup.py  vault_client.py
ciaf/agents/: README.md  __init__.py  events.py
ciaf/anchoring/: README.md  __init__.py  dataset_anchor.py  lazy_manager.py  simple_lazy_manager.py  true_lazy_manager.py
ciaf/api/: API_ENHANCEMENT_SUMMARY.md  README.md  __init__.py  consolidated_api.py  framework.py  interfaces.py  policy.py  protocol_implementations.py
ciaf/compliance/: README.md  __init__.py  audit_trails.py  bias_validator.py  corrective_action_log.py  cybersecurity.py  documentation.py  hash_table_metadata.py  human_oversight.py  interfaces.py  policy.py  pre_ingestion_validator.py  protocol_implementations.py  regulatory_mapping.py  reports.py  risk_assessment.py  robustness_report_robustness_test_2b252b4e.json  robustness_report_robustness_test_3677e0da.json  robustness_report_robustness_test_8d942364.json  robustness_report_robustness_test_baa3b363.json  robustness_testing.py  stakeholder_impact.py  text.txt  transparency_reports.py  uncertainty_quantification.py  validators.py  visualization.py  web_dashboard.py
ciaf/core/: README.md  __init__.py  base_anchor.py  canonicalization.py  constants.py  crypto.py  determinism.py  enums.py  interfaces.py  key_management.py  keys.py  merkle.py  policy_enforcement.py  signers.py  test_vectors.py  worm_store.py
ciaf/examples/: README.md  advanced_example.py  basic_example.py  enterprise_integration_demo.py  fraud_detection_audit_report_20250920_114550.json  metadata_reveal.py  quick_lcm_test_final.py  risk_audit_example.py  rng_audit_example.py  showcase_example.py
ciaf/explainability/: README.md  __init__.py  interfaces.py  policy.py  protocol_implementations.py
ciaf/extensions/: __init__.py  compliance.py
ciaf/inference/: README.md  __init__.py  receipts.py
ciaf/lcm/: README.md  __init__.py  capsule_headers.py  dataset_family_manager.py  dataset_manager.py  deployment_manager.py  inference_manager.py  model_manager.py  policy.py  protocol_implementations.py  root_manager.py  training_manager.py
ciaf/metadata_tags/: README.md
ciaf/preprocessing/: README.md  __init__.py  data_quality.py  interfaces.py  policy.py  protocol_implementations.py
ciaf/provenance/: README.md  __init__.py  capsules.py  snapshots.py
ciaf/schemas/: action-receipt.schema.json  action-request.schema.json  anchor.schema.json  approval-decision.schema.json  artifact-evidence.schema.json  artifact-fingerprint.schema.json  artifact-hash-set.schema.json  build-artifact.schema.json  capsule.schema.json  corrective-action.schema.json  dataset-metadata.schema.json  deployment-anchor.schema.json  elevation-grant.schema.json  execution-result.schema.json  forensic-fragment-set.schema.json  gate-definition.schema.json  gate-evaluation.schema.json  gate-receipt.schema.json  human-override-record.schema.json  identity.schema.json  image-forensic-fragment.schema.json  inference-receipt-enhanced.schema.json  lineage-references.schema.json  merkle-proof.schema.json  model-architecture.schema.json  permission.schema.json  policy-evaluation.schema.json  policy-rule.schema.json  policy-set.schema.json  policy.schema.json  predeployment-anchor.schema.json  proof-metadata.schema.json  receipt.schema.json  resource.schema.json  sbom.schema.json  text-forensic-fragment.schema.json  training-checkpoint.schema.json  training-environment.schema.json  training-metrics.schema.json  training-receipt-enhanced.schema.json  (+3 more)
ciaf/simulation/: README.md  __init__.py  ml_framework.py  ml_framework_backup.py  mock_llm.py
ciaf/uncertainty/: README.md  __init__.py
ciaf/utils/: __init__.py  data_utils.py  error_utils.py  regression_base.py  wrapper_utils.py
ciaf/vault/: README.md  __init__.py  metadata_config.py  metadata_integration.py  metadata_storage.py  metadata_storage_compressed.py  metadata_storage_optimized.py
ciaf/watermarks/: README.md  __init__.py  advanced_features.py  fragment_selection.py  fragment_verification.py  hashing.py  hierarchical_verification.py  images.py  models.py  signature_envelope.py  text.py  unified_interface.py  vault_adapter.py  verify.py
ciaf/web/: README.md  __init__.py  classifiers.py  collectors.py  detectors.py  events.py  policy.py  receipts.py  redaction.py  vault_adapter.py
ciaf/wrappers/: README.md  __init__.py  policy.py  (+8 more)
(+376 files in other folders)
